<?xml version="1.0" encoding="utf-8"?>
   <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    tools:layout_editor_absoluteX="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img"
            android:layout_width="138dp"
            android:layout_height="118dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img" />

        <ImageView

            android:id="@+id/img_1"
            android:layout_width="138dp"
            android:layout_height="118dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:srcCompat="@drawable/img_1" />

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="138dp"
            android:layout_height="118dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_1"
            app:srcCompat="@drawable/img_2" />

        <ImageView
            android:id="@+id/img_3"
            android:layout_width="138dp"
            android:layout_height="118dp"
            android:layout_marginTop="0dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_2"
            app:srcCompat="@drawable/img_3" />

        <ImageView
            android:id="@+id/img_4"
            android:layout_width="138dp"
            android:layout_height="118dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_3"
            app:srcCompat="@drawable/img_4" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:background="#0E32B5"
            android:textSize="20sp"
            android:text="@string/Hamburger"
            android:textColor="#ff0000"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:background="#0E32B5"
            android:text="@string/Sandwich"
            android:textColor="#ff0000"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_1"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:background="#0E32B5"
            android:textSize="20dp"
            android:text="@string/Hot_dog"
            android:textColor="#ff0000"
            app:layout_constraintBottom_toBottomOf="@+id/img_2"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:background="#0E32B5"
            android:textSize="20dp"
            android:text="@string/Coca_cola"
            android:textColor="#ff0000"
            app:layout_constraintBottom_toBottomOf="@+id/img_3"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:background="#0E32B5"
            android:textSize="20dp"
            android:text="@string/Sharbat"
            android:textColor="#ff0000"
            app:layout_constraintBottom_toBottomOf="@+id/img_4"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="210dp"
            android:layout_height="73dp"
            android:layout_marginTop="12dp"
            android:text="@string/Buyurtma"
            android:textColor="#000000"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_4" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>